# GeneRax

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  gitpull.sh  install.sh
ext/: CMakeLists.txt
ext/ale/: CMakeLists.txt  Constants.h  Defines.h
ext/ale/containers/: AbstractGrid.cpp  AbstractGrid.h  Cost.cpp  Cost.h  GeneMap.cpp  GeneMap.h  NodeProperty.cpp  NodeProperty.h
ext/ale/tools/: PhyloTreeToolBox.cpp  PhyloTreeToolBox.h  SpeciesGeneMapper.cpp  SpeciesGeneMapper.h  Utils.cpp  Utils.h
ext/boost/: CMakeLists.txt
ext/bpp/: .gitrepo  CMakeLists.txt
ext/bpp/bpp-core/: .gitignore  .gitrepo  AUTHORS.txt  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL.txt  bpp-core.spec
ext/bpp/bpp-phyl/: .gitrepo  AUTHORS.txt  CMakeLists.txt  COPYING.txt  ChangeLog  Doxyfile
ext/bpp/bpp-seq/: .gitrepo  AUTHORS.txt  CMakeLists.txt  ChangeLog  Doxyfile
src/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  JointLikelihoodEvaluator.cpp  JointSearch.cpp  JointSearchLight.cpp  Logger.cpp  Logger.hpp  ParallelContext.cpp  ParallelContext.hpp  Scenario.cpp  Scenario.hpp
src/Asteroid/: AsteroidArguments.cpp  AsteroidArguments.hpp  AsteroidOptimizer.cpp  AsteroidOptimizer.hpp  CMakeLists.txt  asteroid.cpp
src/GeneRax/: CMakeLists.txt  GeneRaxArguments.cpp  GeneRaxArguments.hpp  GeneRaxCore.cpp  GeneRaxCore.hpp  GeneRaxInstance.cpp  GeneRaxInstance.hpp  GeneRaxSlaves.cpp  generax.cpp
src/GeneTegrator/: CMakeLists.txt  ConditionalClades.cpp  ConditionalClades.hpp  GTSpeciesTreeOptimizer.cpp  GTSpeciesTreeOptimizer.hpp  GeneTegratorArguments.cpp  GeneTegratorArguments.hpp  MultiModel.hpp  TrimFamilies.cpp  TrimFamilies.hpp  UndatedDLMultiModel.hpp  UndatedDTLMultiModel.hpp  bitvector.cpp  bitvector.hpp  genetegrator.cpp
src/IO/: Arguments.cpp  Arguments.hpp  GeneSpeciesMapping.cpp  Logger.cpp  ParallelOfstream.cpp  ParallelOfstream.hpp
src/JointSearch/: Arguments.cpp  CMakeLists.txt  JSArguments.cpp  JSArguments.hpp  JointSearch.cpp
src/JointSearchLight/: Arguments.hpp  CMakeLists.txt  JointSearchLight.cpp
src/LightSearch/: CMakeLists.txt  lightsearch.cpp
src/MiniBME/: CMakeLists.txt  MiniBMEArguments.cpp  MiniBMEArguments.hpp  MiniBMEOptimizer.cpp  MiniBMEOptimizer.hpp  minibme.cpp
src/NJRax/: CMakeLists.txt  njrax.cpp
src/SpeciesRax/: CMakeLists.txt  SpeciesRaxArguments.cpp  SpeciesRaxArguments.hpp  speciesrax.cpp
src/SpeciesSplitSearch/: CMakeLists.txt  SpeciesSplitArguments.cpp  SpeciesSplitArguments.hpp  SpeciesSplitSpeciesTreeOptimizer.cpp  SpeciesSplitSpeciesTreeOptimizer.hpp  speciessplitsearch.cpp
src/TreeCombination/: CMakeLists.txt  treecombination.cpp
src/ale/: AleArguments.cpp  AleArguments.hpp  AleEvaluator.cpp  AleEvaluator.hpp  AleModelParameters.hpp  AleOptimizer.cpp  AleOptimizer.hpp  CMakeLists.txt  MultiModel.hpp  TrimFamilies.cpp  TrimFamilies.hpp  UndatedDLMultiModel.hpp  UndatedDTLMultiModel.hpp  ale.cpp
src/benchmarks/: CMakeLists.txt  bench_rec_likelihood.cpp
src/core/: Arguments.hpp  CMakeLists.txt  ParallelContext.cpp  ParallelContext.hpp  PerCoreGeneTrees.cpp  PerCoreGeneTrees.hpp  Scenario.cpp  Scenario.hpp  enums.hpp
src/core/DistanceMethods/: Asteroid.cpp  Asteroid.hpp  Astrid.cpp  Astrid.hpp  Cherry.cpp  Cherry.hpp  CherryPro.cpp  MiniBME.cpp  MiniBMEPruned.cpp  MiniBMEPruned.hpp  MiniNJ.cpp  MiniNJ.hpp  NeighborJoining.cpp
src/core/IO/: Arguments.hpp  ArgumentsHelper.hpp  CustomNewickParser.cpp  CustomNewickParser.hpp  Families.cpp  Families.hpp  FamiliesFileParser.cpp  FamiliesFileParser.hpp  FileSystem.hpp  GeneSpeciesMapping.cpp  GeneSpeciesMapping.hpp  HighwayCandidateParser.cpp  HighwayCandidateParser.hpp  IO.cpp  IO.hpp  LibpllException.hpp  LibpllParsers.cpp  LibpllParsers.hpp  Logger.cpp  Logger.hpp  Model.cpp  Model.hpp  NewickParserCommon.cpp  NewickParserCommon.hpp  ParallelOfstream.cpp  ParallelOfstream.hpp  RaxmlTypes.hpp  ReconciliationWriter.cpp  ReconciliationWriter.hpp  RootedNewickParser.cpp  RootedNewickParser.hpp  types.hpp
src/core/NJ/: BME.cpp  BME.hpp  Cherry.cpp  CherryPro.cpp  CherryPro.hpp  MiniBME.cpp  MiniBME.hpp  MiniBMEPruned.cpp  MiniBMEPruned.hpp  MiniNJ.cpp  MiniNJ.hpp  NFJ.cpp  NFJ.hpp  NeighborJoining.cpp  NeighborJoining.hpp
src/core/branchlengths/: ReconciliationBLEstimator.cpp  ReconciliationBLEstimator.hpp
src/core/ccp/: ConditionalClades.cpp  ConditionalClades.hpp  RootedSpeciesSplitScore.cpp  RootedSpeciesSplitScore.hpp  SpeciesSplitScore.cpp  SpeciesSplitScore.hpp  SpeciesSplits.cpp  SpeciesSplits.hpp  UnrootedSpeciesSplitScore.cpp  UnrootedSpeciesSplitScore.hpp
src/core/families/: Families.cpp  Families.hpp
src/core/lbfgsb/: lbfgsb_new.cpp
src/core/likelihoods/: LibpllEvaluation.cpp  LibpllEvaluation.hpp  ReconciliationEvaluation.cpp  ReconciliationEvaluation.hpp  SubtreeRepeatsCache.cpp  SubtreeRepeatsCache.hpp
src/core/maths/: AverageStream.hpp  DTLRates.hpp  ModelParameters.hpp  Parameters.hpp  Random.cpp  Random.hpp  ScaledValue.hpp  incbeta.h  (+3 more)
src/geco/: CMakeLists.txt  GecoArguments.cpp  GecoArguments.hpp  geco.cpp
src/generax/: CMakeLists.txt  GeneRaxArguments.cpp  GeneRaxArguments.hpp  GeneRaxSlaves.cpp  generax.cpp  generax_optimize_gene_trees.cpp
src/likelihoods/: ALEEvaluation.cpp  ALEEvaluation.hpp  LibpllEvaluation.cpp  LibpllEvaluation.h  LibpllEvaluation.hpp  ReconciliationEvaluation.cpp  ReconciliationEvaluation.hpp
src/maths/: ScaledValue.hpp
src/optimizers/: DTLOptimizer.cpp  DTLOptimizer.hpp
src/parsers/: GeneSpeciesMapping.hpp
src/tests/: CMakeLists.txt  au_tests.cpp  conditional_clade_tests.cpp  custom_newick_parser_tests.cpp  pllrooted_tree_tests.cpp  pllunrooted_tree_tests.cpp  polytomy_solver_tests.cpp  polytree_tests.cpp  rooted_newick_parser_tests.cpp  species_splits_tests.cpp  species_tree_tests.cpp  split_score_tests.cpp  test_coraxlib.cpp
src/tools/: CMakeLists.txt  ccp_printer.cpp  tree_list_compress.cpp
src/treeSearch/: JointTree.cpp  JointTree.h  JointTree.hpp  Moves.cpp  Moves.h  Moves.hpp  NNISearch.cpp  NNISearch.h  Rollbacks.cpp  Rollbacks.hpp  SPRSearch.cpp  SPRSearch.h  SPRSearch.hpp  SearchUtils.cpp  SearchUtils.hpp
(+388 files in other folders)
